--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container spacer">
+  <button routerLink="/about" class="btn btn-primary">Contacts</button>
+  <button routerLink="/contacts" class="btn btn-primary">Nouveau Contact</button>
+</div>
+
+<router-outlet></router-outlet>
