--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container spacer">
-  <button routerLink="/about" class="btn btn-primary">Contacts</button>
-  <button routerLink="/contacts" class="btn btn-primary">Nouveau Contact</button>
+  <button routerLink="/about" class="btn btn-primary">A propos</button>
+  <button routerLink="/contacts" class="btn btn-primary">Contacts</button>
+  <button routerLink="/new-contact" class="btn btn-primary">Nouveau Contact</button>
 </div>
 
 <router-outlet></router-outlet>
